# yt-downloader-gui

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Installation.md  LICENSE.txt  README.md  SStube.py  contributing.md  pyproject.toml  requirements.txt
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  sstube-workflow.yml
Source Code/: SSTube.spec  SStube.py
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md
src/: Installation.md  SStube.py  build.bat  main.py
src/app/: download_manager.py  login_manager.py  main_window.py  ui_manager.py
src/assets/: style.qss
src/ytd_gui/: __init__.py  updater.py
tests/: test_download_manager.py  test_updater.py
